# LoveAdmin-Tools

./: Cargo.toml  README.md  debug_database.db  pull_request_template.md
.githooks/: commit-msg
.github/workflows/: rust.yml  structurizr-diagrams-update.yml
LoveAdmin-tool/: Cargo.toml
LoveAdmin-tool/docs/Architecture/C4/: workspace.dsl
docs/Architecture/C4/: workspace.dsl
python/: Readme.md  analyze_data.py  build_executable.sh
src/: config.yaml  config_loader.rs  data_structures.rs  database.rs  main.rs  query.rs  transform.rs
